First encoding for types

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,7 @@ SOURCES = JGS.noc.ml
 REWRITER_EXES = rewriter.native rewriter_ppx.native
 PXFLAGS = -pp './rewriter_ppx.native -new-typenames -pp ./rewriter.native'
 
-.SUFFIXES: .byte .native .ml .mli .cmi .cmx .cmo .ml2mk.ml .d
+.SUFFIXES: .byte .native .ml .mli .cmi .cmx .cmo .noc.ml .d
 .PHONY: clean all
 
 # Put the name of the executable here
@@ -16,8 +16,8 @@ SOURCES ?=
 OCAMLC = ocamlfind c
 OCAMLOPT = ocamlfind opt
 OCAMLDEP = ocamlfind dep
-MLSOURCES = $(filter-out %.ml2mk.ml, $(SOURCES))
-MKSOURCES = $(filter %.ml2mk.ml, $(SOURCES))
+MLSOURCES = $(filter-out %.noc.ml, $(SOURCES))
+MKSOURCES = $(filter %.noc.ml, $(SOURCES))
 # -dsource --- dump a text *after* camlp5 extension
 PXFLAGS ?= -syntax camlp5o -package GT-p5,OCanren.syntax,GT.syntax.all
 REWRITER_EXES ?=
@@ -34,19 +34,19 @@ ifeq (cleanall, $(filter clean, $(MAKECMDGOALS))$(filter all, $(MAKECMDGOALS)))
 $(error Using 'clean' and 'all' targets in same invocation of $(MAKE) is discouraged)
 endif
 
-all: $(MKSOURCES:.ml2mk.ml=.ml) $(TOPFILE).native $(TOPFILE).byte
+all: $(MKSOURCES:.noc.ml=.ml) $(TOPFILE).native $(TOPFILE).byte
 rewriter.native:
 	mkcamlp5.opt -package camlp5.pa_o,camlp5.pr_dump,GT.syntax,OCanren.syntax,GT.syntax.all -o $@ #-verbose
 
 $(TOPFILE).native: $(MKSOURCES:.ml2mk.ml=.cmx) $(MLSOURCES:.ml=.cmx)
 	$(OCAMLOPT) $(BFLAGS) $(OFLAGS) $(LIBS:.cma=.cmxa) -linkpkg $^ -o $@
 
-$(TOPFILE).byte:  $(MKSOURCES:.ml2mk.ml=.cmo) $(MLSOURCES:.ml=.cmo)
+$(TOPFILE).byte:  $(MKSOURCES:.noc.ml=.cmo) $(MLSOURCES:.ml=.cmo)
 	$(OCAMLC)   $(BFLAGS) $(LIBS) -linkpkg $^ -o $@
 
 clean:
 	$(RM) *.cm[iox] *.annot *.o *.opt *.byte *~ *.d $(TOPFILE).native $(TOPFILE).byte $(REWRITER_EXES) \
-		$(MKSOURCES:%.ml2mk.ml=%.ml) .depend -r $(DEPDIR)
+		$(MKSOURCES:%.noc.ml=%.ml) .depend -r $(DEPDIR)
 
 # A trick with dependecies from here: http://make.mad-scientist.net/papers/advanced-auto-dependency-generation/
 DEPDIR := .deps
@@ -58,13 +58,13 @@ $(DEPDIR)/%.ml.d: %.ml $(REWRITER_EXES)
 $(DEPDIR)/%.mli.d: %.mli $(REWRITER_EXES)
 	$(OCAMLDEP) $(PXFLAGS) $< > $@
 
-DEPFILES := $(MLSOURCES:%.ml=$(DEPDIR)/%.ml.d) $(MKSOURCES:%.ml2mk.ml=$(DEPDIR)/%.ml.d)
+DEPFILES := $(MLSOURCES:%.ml=$(DEPDIR)/%.ml.d) $(MKSOURCES:%.noc.ml=$(DEPDIR)/%.ml.d)
 $(DEPFILES): $(DEPDIR)
 include $(wildcard $(DEPFILES))
 include $(DEPFILES)
 
 # generic rules
-%.ml: %.ml2mk.ml $(REWRITER_EXES)
+%.ml: %.noc.ml $(REWRITER_EXES)
 	$(NOCANREN) $(NOCFLAGS) -o $@ $<
 
 %.cmi: %.mli $(REWRITER_EXES)  $(DEPDIR)/%.mli.d | $(DEPDIR)
