--- a/src/dune
+++ b/src/dune
@@ -1,8 +1,15 @@
 (executable
- (name JGS)
- (modules JGS)
- (flags
-  (-w -8-9-27-37)))
+ (name JGS_run)
+ (modules JGS JGS_run)
+ (libraries GT OCanren noCanren.Option noCanren.List)
+ (flags (-rectypes))
+ (preprocess
+  (pps
+   OCanren-ppx.ppx_repr
+   OCanren-ppx.ppx_fresh
+   OCanren-ppx.ppx_distrib
+   -new-typenames
+   GT.ppx_all)))
 
 (rule
  (targets JGS.ml)
@@ -12,4 +19,7 @@
   (run
    sh
    -c
-   "noCanren -w -8 %{input} -rectypes -o %{targets} | ocamlformat --enable-outside-detected-project --impl -")))
+   "noCanren -w -8 %{input} -I `ocamlfind -query OCanren` -rectypes -o %{targets} | ocamlformat --enable-outside-detected-project --impl -")))
+
+(cram
+ (deps ./JGS_run.exe))
