--- a/src/jsons/dune
+++ b/src/jsons/dune
@@ -8,7 +8,14 @@
   (pps ppx_blob)))
 
 (cram
- (deps run_json.exe test1.json test2.json test3.json run4.json guava.json))
+ (deps
+  run_json.exe
+  test1.json
+  test2.json
+  test3.json
+  run4.json
+  ;guava.json
+  ))
 
 (rule
  (targets test1.json test2.json test3.json)
