--- a/src/jsons_real/dune
+++ b/src/jsons_real/dune
@@ -3,5 +3,13 @@
   ../jsons/run_json.exe
   0.json
   1.json
+  2.json
+  3.json
+  4.json
+  5.json
+  6.json
+  7.json
+  8.json
+  9.json
   ;
   ))
