--- a/src/dune
+++ b/src/dune
@@ -7,7 +7,7 @@
  (name JGS_lib)
  (modules JGS CT_of_json JGS_Helpers MutableTypeTable test_of_json)
  (wrapped false)
- (libraries yojson GT OCanren noCanren.Option noCanren.List ocamlgraph)
+ (libraries yojson GT OCanren noCanren.Option noCanren.List ocamlgraph str)
  (flags
   (:standard -rectypes))
  (preprocess
