--- a/src/jsons/dune
+++ b/src/jsons/dune
@@ -14,11 +14,12 @@
   test2.json
   test3.json
   run4.json
+  test5.json
   ;guava.json
   ))
 
 (rule
- (targets test1.json test2.json test3.json)
+ (targets test1.json test2.json test3.json test5.json)
  (mode
   (promote (until-clean)))
  (deps ./make_JSONs.exe)
