--- a/src/Makefile
+++ b/src/Makefile
@@ -12,3 +12,7 @@ auto-promote:
 
 clean:
 	dune clean
+
+.PHONY: deps
+deps:
+	opam install benchmark ppx_yojson_conv yojson ocamlformat ocaml-lsp-server mtime.1.4.0 -y
