--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -30,9 +30,8 @@ jobs:
 
       - name: Checkout code
         uses: actions/checkout@v3
-
-      - run: git submodule update --init
-
+        with:
+          submodules: true
 
       - run: opam install ./src --yes --deps-only --with-test --with-doc
 
