--- a/src/JGS.opam
+++ b/src/JGS.opam
@@ -9,7 +9,7 @@ authors: [
   "Dmitrii Kosarev https://github.com/Kakadu"
   "Petr Lozov https://github.com/Lozov-Petr"
 ]
-license: "LGPL-3"
+license: "LGPL-3.0-or-later"
 homepage: "https://github.com/PLTools/OCanren"
 bug-reports: "https://github.com/PLTools/JGS/issues"
 depends: [
@@ -18,7 +18,10 @@ depends: [
   "OCanren"
   "OCanren-ppx"
   "noCanren"
-  "yojson"
+  "yojson" {>= "2.1"}
+  "ppx_yojson_conv_lib" {>= "v0.15.0"}
+  "ppx_yojson_conv" {>= "v0.15.1"}
+  "benchmark" {with-test}
   "ppx_inline_test"
   "GT" {>= "0.5"}
   "ocamlformat" {with-test & >= "0.22"}
