CI: pinning base to work around noCanren/configure error
Signed-off-by: Kakadu <Kakadu@pm.me>

--- a/src/JGS.opam
+++ b/src/JGS.opam
@@ -21,6 +21,7 @@ depends: [
   "yojson" {>= "2.1"}
   "ppx_yojson_conv_lib" {>= "v0.15.0"}
   "ppx_yojson_conv" {>= "v0.15.1"}
+  "base" {= "0.15.1"}
   "benchmark" {with-test}
   "ppx_inline_test"
   "GT" {>= "0.5"}
