Improved debug-var-based duplicate checking prototype.

--- a/src/Makefile
+++ b/src/Makefile
@@ -36,11 +36,14 @@ EXAMPLES = down1_1 down1_2 down1_3 down1_4 \
 
 define LOPSTR_EXAMPLES
 
-example_$(1):
-	$(RUN_EXAMPLE) only_type_queries/LOPSTR2023/$(1).json
+example_structural_$(1):
+	$(RUN_EXAMPLE) -remove-dups-structural only_type_queries/LOPSTR2023/$(1).json
+
+example_debug_var_$(1):
+	$(RUN_EXAMPLE) -remove-dups-debug-var only_type_queries/LOPSTR2023/$(1).json
 
 example_with_dups_$(1):
-	$(RUN_EXAMPLE) -no-remove-dups only_type_queries/LOPSTR2023/$(1).json
+	$(RUN_EXAMPLE) only_type_queries/LOPSTR2023/$(1).json
 
 example_no_spec_$(1):
 	$(RUN_EXAMPLE) -no-table-spec only_type_queries/LOPSTR2023/$(1).json
@@ -57,7 +60,14 @@ $(foreach i,$(EXAMPLES),$(eval $(call LOPSTR_EXAMPLES,$(i))))
 
 define LOPSTR_UP_DOWN_EXAMPLES
 
-example_upper_first_$(1):
+
+example_upper_first_structural_$(1):
+	$(RUN_EXAMPLE) -upper-bound-first -remove-dups-structural only_type_queries/LOPSTR2023/$(1).json
+
+example_upper_first_debug_var_$(1):
+	$(RUN_EXAMPLE) -upper-bound-first -remove-dups-debug-var only_type_queries/LOPSTR2023/$(1).json
+
+example_upper_first_with_dups_$(1):
 	$(RUN_EXAMPLE) -upper-bound-first only_type_queries/LOPSTR2023/$(1).json
 
 example_upper_first_no_spec_$(1):
