Update from yojson=2.2.2 and ppx_yojson=1.3.0
Signed-off-by: Kakadu <Kakadu@pm.me>

--- a/src/dune
+++ b/src/dune
@@ -17,7 +17,15 @@
   ;
   )
  (wrapped false)
- (libraries yojson GT OCanren noCanren.Option noCanren.List ocamlgraph str)
+ (libraries
+  yojson
+  ppx_yojson_conv_lib
+  GT
+  OCanren
+  noCanren.Option
+  noCanren.List
+  ocamlgraph
+  str)
  (flags
   (:standard -rectypes))
  (preprocess
