--- a/src/only_type_queries/dune
+++ b/src/only_type_queries/dune
@@ -1,5 +1,7 @@
 (cram
- (deps %{project_root}/jsons/run_json2.exe %{project_root}/jsons_real/0.json))
+ (deps
+  %{project_root}/src/jsons/run_json2.exe
+  %{project_root}/src/jsons_real/0.json))
 
 (cram
  (applies_to Iterable_of_object)
