LOPSTR23: all 9 benches work
Signed-off-by: Kakadu <Kakadu@pm.me>

--- a/src/Makefile
+++ b/src/Makefile
@@ -71,12 +71,13 @@ $(foreach i,$(UP_DOWN_EXAMPLES),$(eval $(call LOPSTR_UP_DOWN_EXAMPLES,$(i))))
 # Preapare target 'bench_LOPSTR' for 7 LOPSTR benchmarks
 .PHONY: bench_LOPSTR bench_LOPSTR_run
 JGS_REPEAT ?= 10
-EXT     :=   TESTI  TESTII TESTIII  TESTV TESTVI TESTVII    TESTVIII
-CODE    := down1_1 down2_1 down2_2  up1_1  up2_1   up3_1 up1_down1_1
+EXT     :=   TESTI TESTII TESTIII TESTIV TESTV TESTVI TESTVII  TESTIX
+CODE    := down1_1 down2_1 down2_2   up3_0 up1_1  up2_1    up3_1   up1_down1_1
 # Getters
 JOINED  := $(join $(addsuffix :,$(EXT)),$(CODE))
 GET_EXT  = $(word 1,$(subst :, ,$1))
 GET_CODE = $(word 2,$(subst :, ,$1))
+
 define BUILD_RULES
 .PHONY: LOPSTR_$1
 LOPSTR_$1:
@@ -85,6 +86,10 @@ bench_LOPSTR_run: LOPSTR_$1
 endef
 $(foreach j,$(JOINED),$(eval $(call BUILD_RULES,$(call GET_EXT,$j),$(call GET_CODE,$j))))
 
+LOPSTR_TESTVIII:
+	JGS_BENCH=$(JGS_REPEAT) $(RUN_EXAMPLE) -la-testname TESTVIII -la-file TESTVIII.tex only_type_queries/LOPSTR2023/up1_down1_1.json -lobefore
+bench_LOPSTR_run: LOPSTR_TESTVIII
+
 bench_LOPSTR: bench_LOPSTR_run
-	cat $(addsuffix .tex,$(EXT)) > LOPSTR.tex
-	$(RM) $(addsuffix .tex,$(EXT))
+	cat $(addsuffix .tex,$(EXT) TESTVIII) > LOPSTR.tex
+	$(RM) $(addsuffix .tex,$(EXT) TESTVIII)
