--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -8,13 +8,14 @@ on:
       # https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#example-ignoring-paths
     branches:
       - 'master'
+      - 'LOPSTR-2023'
 
 jobs:
   build:
     env:
       OPAMROOT: /home/user/.opam
 
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     container:
       image: kakadu18/ocaml:pltlab
       options: --user user
@@ -37,8 +38,8 @@ jobs:
 
       - run: opam install ./src --yes --deps-only --with-test --with-doc
 
-      - name: list installed dependencies...
+      - name: List installed dependencies...
         run: opam list
 
-      - run: opam exec -- make -C src #dune build
-
+      - run: opam exec -- dune test --profile=release
+        working-directory: ./src
