--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -7,7 +7,7 @@ on:
       # do not run CI if we are writing a paper
       # https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#example-ignoring-paths
     branches:
-      - 'master'
+      #- 'master'
       - 'LOPSTR-2023'
 
 jobs:
