--- a/src/jsons/dune
+++ b/src/jsons/dune
@@ -23,17 +23,53 @@
  (preprocess
   (pps OCanren-ppx.ppx_fresh OCanren-ppx.ppx_wildcard)))
 
+; (timeout 2.5) needs dune 3.20
+
 (cram
- ; (timeout 2.5) needs dune 3.20
+ (enabled_if
+  (= %{profile} "dev"))
+ (applies_to 1)
+ (deps ./run_json.exe 1.json))
+
+(cram
+ (enabled_if
+  (= %{profile} "dev"))
+ (applies_to 2)
+ (deps ./run_json.exe 2.json))
+
+(cram
+ (enabled_if
+  (= %{profile} "dev"))
+ (applies_to 5)
+ (deps ./run_json.exe 5.json))
+
+(cram
+ (enabled_if
+  (= %{profile} "dev"))
+ (applies_to 7)
+ (deps ./run_json.exe 7.json))
+
+(cram
+ (enabled_if
+  (= %{profile} "dev"))
+ (applies_to run1)
+ (deps ./run_json.exe test1.json))
+
+(cram
+ (enabled_if
+  (= %{profile} "dev"))
+ (applies_to run3)
+ (deps ./run_json.exe test3.json))
+
+(cram
+ (enabled_if
+  (= %{profile} "dev"))
+ (applies_to 6closure)
+ (deps ./run_json.exe 6closure.json))
+
+(cram
  (deps
   run_json.exe
-  run_json2.exe
-  test1.json
-  2.json
-  test3.json
-  5.json
-  6closure.json
-  7.json
   8.json
   9.json
   ;
@@ -41,6 +77,7 @@
 
 (rule
  (targets
+  1.json
   test1.json
   2.json
   test3.json
